centralised all email

--- a/docs/4. EMAIL SYSTEM.md
+++ b/docs/4. EMAIL SYSTEM.md
@@ -60,6 +60,81 @@ email:
     subject: '500 Error Notification'
 ```
 
+## OAuth2 Authentication
+
+For enhanced security, the application supports OAuth2 authentication using the `TravellersPalm::Mailer::OAuth2` module. This provides a more secure alternative to app passwords.
+
+### OAuth2 Setup
+
+1. **Google Cloud Console Setup**:
+   - Create a project in Google Cloud Console
+   - Enable Gmail API
+   - Create OAuth2 credentials (Client ID and Client Secret)
+   - Add your application's redirect URI
+
+2. **Generate Refresh Token**:
+   - Use the OAuth2 flow to obtain a refresh token
+   - Store the refresh token securely
+
+3. **Environment Configuration**:
+   ```bash
+   EMAIL_CLIENT_ID=your_google_client_id
+   EMAIL_CLIENT_SECRET=your_google_client_secret
+   EMAIL_REFRESH_TOKEN=your_refresh_token
+   EMAIL_USER=admin@odyssey.co.in
+   ```
+
+### Using OAuth2 Mailer
+
+#### Direct Email Sending
+```perl
+use TravellersPalm::Mailer::OAuth2;
+
+my $mailer = TravellersPalm::Mailer::OAuth2->new(
+    client_id     => $ENV{EMAIL_CLIENT_ID},
+    client_secret => $ENV{EMAIL_CLIENT_SECRET}, 
+    refresh_token => $ENV{EMAIL_REFRESH_TOKEN},
+    email_user    => $ENV{EMAIL_USER},
+);
+
+$mailer->send_email(
+    to      => 'user@example.com',
+    subject => 'Subject',
+    body    => 'Message body',
+);
+```
+
+#### With Email::Stuffer Integration
+```perl
+use Email::Stuffer;
+
+# Get transport from OAuth2 mailer
+my $transport = $mailer->get_transport();
+
+Email::Stuffer->from('admin@odyssey.co.in')
+              ->to('recipient@example.com')
+              ->subject('Test Message')
+              ->text_body('Hello from OAuth2!')
+              ->transport($transport)
+              ->send;
+```
+
+#### Token Management
+The OAuth2 module automatically handles:
+- **Token Refresh**: Automatically refreshes access tokens when they expire
+- **Token Caching**: Caches valid tokens to minimize API calls
+- **Error Handling**: Graceful handling of authentication failures
+
+### OAuth2 vs App Passwords
+
+| Feature | OAuth2 | App Passwords |
+|---------|--------|---------------|
+| Security | Higher (token-based) | Lower (password-based) |
+| Revocation | Granular control | Account-level only |
+| Monitoring | Detailed API logs | Limited logging |
+| Setup Complexity | Higher | Lower |
+| Recommended For | Production | Development/Testing |
+
 ## How It Works
 
 ### 1. **Error Detection**
